# chatbot

./: README.md
backend/: main.py  pyproject.toml
chat_bot/: .env  index.html  main.py  pyproject.toml
chat_bot/qdrant_storage/collection/chat_memory/: storage.sqlite
frontend/: index.html
